--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
   "license": "ISC",
   "devDependencies": {},
   "dependencies": {
-    "@types/express": "^4.16.0",
-    "@types/ws": "^6.0.1",
-    "typescript": "^3.0.3",
     "@types/core-js": "^2.5.0",
     "@types/crypto-js": "^3.1.43",
+    "@types/express": "^4.16.0",
+    "@types/ws": "^6.0.1",
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.3",
+    "minimist": "^1.2.0",
+    "typescript": "^3.0.3",
     "ws": "^6.0.0"
   }
 }
